# obc

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt  package.json  tsconfig.json
.github/workflows/: cmake.yml
build-debug/: oboc
src/: .clang-format  Compiler.cpp  Compiler.hpp  ErrorInfo.cpp  ErrorInfo.hpp  Parser.cpp  Parser.hpp  Scanner.cpp  Scanner.hpp  Token.cpp  Token.hpp  TokenUtils.cpp  TokenUtils.hpp  Version.hpp  _version.hpp  compiler.cppm  error_info.cpp  error_info.cppm  main.cpp  parser.cpp  parser.cppm  scanner.cpp  scanner.cppm  scanner.hpp  scanner.token.cppm  scanner.token_utils.cpp  scanner.token_utils.cppm  token.cpp  token.cppm  token.hpp  token_utils.cpp  version.cppm  version.hpp
src/obc/: compiler.cppm  error_info.cppm  parser.cpp  parser.cppm  scanner.cpp  scanner.cppm  scanner.token.cppm  scanner.token_utils.cpp  version.cppm
src/obc/scanner/: scanner.cppm
src/test/: ScannerTestSuite.cpp
src/test/oberon_src/: Fractions.Mod  Fractions_Lower.Mod  Hello.Mod  MagicSquares.Mod  NumLiterals.Mod  Permutations.Mod  PrimeNumbers.Mod  Samples.Mod
